Swap, reverse, rotate, lower bound

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "General-purpose algorithms",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/tshev/js-algorithms/issues"
   },
-  "homepage": "https://github.com/tshev/js-algorithms#readme"
+  "homepage": "https://github.com/tshev/js-algorithms#readme",
+  "devDependencies": {
+    "jest": "^20.0.4"
+  }
 }
